mool/tests/compile/fail/sql_enum_data_variant.rs
use mool as db;

#[derive(Debug, Clone, Copy, PartialEq, Eq, db::SqlEnum)]
enum Status {
    Draft,
    Published(i32),
}

fn main() {}
