mool/tests/compile/fail/sql_enum_data_variant.stderr
error: SqlEnum supports fieldless variants only
 --> tests/compile/fail/sql_enum_data_variant.rs:6:5
  |
6 |     Published(i32),
  |     ^^^^^^^^^^^^^^
